<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
	<TextView
	    android:id="@+id/Password_text"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/settings_password" >
	</TextView>

	<EditText
	    android:id="@+id/EditText_Pwd1"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:maxLines="1"
	    android:maxLength="32"
	    android:inputType="textPassword" >
	</EditText>
	
	<TextView
	    android:id="@+id/Password_text2"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/settings_password2" >
	</TextView>

	<EditText
	    android:id="@+id/EditText_Pwd2"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:maxLines="1"
	    android:maxLength="32"
	    android:inputType="textPassword">
	</EditText>
	
	<TextView
	    android:id="@+id/TextView_PwdProblem"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/settings_pwd_not_set" >
	</TextView>
	
				    
</LinearLayout>
